[gd_scene load_steps=9 format=3 uid="uid://cb1dfk73r1lgl"]

[ext_resource type="Theme" uid="uid://b02se1uh16h1d" path="res://gui/theme.tres" id="1_gxfk2"]
[ext_resource type="Script" path="res://gui/main_menu.gd" id="2_jliek"]
[ext_resource type="Texture2D" uid="uid://bvv04pcs0ho6h" path="res://assets/title.png" id="2_ybvah"]
[ext_resource type="Texture2D" uid="uid://cub5v6twplo8j" path="res://assets/bg_texture.png" id="3_nrgsi"]
[ext_resource type="Texture2D" uid="uid://c7vh4a7veyu13" path="res://assets/controls.png" id="5_pbtfu"]
[ext_resource type="AudioStream" uid="uid://trkqgydx00y8" path="res://assets/MainMenuTheme.wav" id="5_u7sdu"]
[ext_resource type="AudioStream" uid="uid://dcyny0n6v412a" path="res://assets/click(1).wav" id="7_aa130"]
[ext_resource type="PackedScene" uid="uid://dplq73h303b2h" path="res://gui/settings.tscn" id="8_y84qy"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_gxfk2")
script = ExtResource("2_jliek")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -1
texture_repeat = 2
position = Vector2(256, 160)
texture = ExtResource("3_nrgsi")
region_enabled = true
region_rect = Rect2(256, 160, 512, 320)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_ybvah")

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("5_pbtfu")

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer/CenterContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Play" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="Settings" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Setttings"

[node name="Quit" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Music" type="AudioStreamPlayer2D" parent="."]
position = Vector2(125, 75)
stream = ExtResource("5_u7sdu")
autoplay = true
bus = &"Music"

[node name="ButtonHover" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_aa130")
volume_db = -16.0
pitch_scale = 0.8
bus = &"Sfx"

[node name="Settings" parent="." instance=ExtResource("8_y84qy")]
visible = false
z_index = 2
layout_mode = 1

[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/HBoxContainer/CenterContainer/VBoxContainer/Play" to="." method="_click"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/CenterContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/HBoxContainer/CenterContainer/VBoxContainer/Settings" to="." method="_click"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/CenterContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/HBoxContainer/CenterContainer/VBoxContainer/Quit" to="." method="_click"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/CenterContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
